Fix the timer-progress-bar positioning
I didn't merge it in quite right, so the positioning got messed up :) Excuse me!

(In particular, I accidentally kept both the "position at the top" and "position at the bottom" SCSS rules.)

--- a/src/app/timer-progress-bar/timer-progress-bar.component.scss
+++ b/src/app/timer-progress-bar/timer-progress-bar.component.scss
@@ -3,8 +3,6 @@
 .timer-progress-bar-container {
   position: relative;
   width: 100%;
-  position: absolute;
-  top: 0;
   color: darken($mdc-theme-primary, 35%);
 
   mat-progress-bar.monthProgress {
